--- a/WebMagic-demo/.classpath
+++ b/WebMagic-demo/.classpath
@@ -23,8 +23,9 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/webmagic-core-0.7.3.jar"/>
-	<classpathentry kind="lib" path="lib/webmagic-extension-0.7.3.jar"/>
+	<classpathentry kind="lib" path="lib/webmagic-core-0.7.3.jar" sourcepath="source/webmagic-core-source-0.7.3.zip"/>
+	<classpathentry kind="lib" path="lib/webmagic-extension-0.7.3.jar" sourcepath="source/webmagic-extension-source-0.7.3.zip"/>
 	<classpathentry kind="lib" path="lib/xsoup-0.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jxl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
