--- a/WebMagic-demo/local.properties
+++ b/WebMagic-demo/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 03 13:28:11 CST 2018
-sdk.dir=D\:\\Program Files\\Android\\sdk
+#Mon Dec 03 14:57:57 CST 2018
+sdk.dir=/Users/raodongming/Library/Android/sdk
