--- a/WebMagic-demo/.classpath
+++ b/WebMagic-demo/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-webmagic-core"/>
 	<classpathentry kind="lib" path="lib/accessors-smart-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/asm-5.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/assertj-core-1.5.0.jar"/>
@@ -23,7 +24,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.6.jar"/>
-	<classpathentry kind="lib" path="lib/webmagic-core-0.7.3.jar" sourcepath="source/webmagic-core-source-0.7.3.zip"/>
 	<classpathentry kind="lib" path="lib/webmagic-extension-0.7.3.jar" sourcepath="source/webmagic-extension-source-0.7.3.zip"/>
 	<classpathentry kind="lib" path="lib/xsoup-0.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jxl.jar"/>
